--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+## C++ gitignore
+
 # Prerequisites
 *.d
 
@@ -30,3 +32,23 @@
 *.exe
 *.out
 *.app
+
+## Cmake gitignore
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+cmake-build-debug
+
+## MacOS General
+.DS_Store
+.AppleDouble
+.LSOverride
+.idea
